trunk/Source/include/ODEImport.hpp



typedef float TdReal;

typedef TdxJointGroup *PdxJointGroup;


typedef PdxJointGroup TdJointGroupID;


typedef System::StaticArray<float, 4> TdVector3;


typedef TdVector3 *PdVector3;


typedef System::StaticArray<float, 4> TdVector4;


typedef System::StaticArray<float, 12> TdMatrix3;


typedef TdMatrix3 *PdMatrix3;


typedef TdVector4 TdQuaternion;


typedef System::StaticArray<float, 6> TdAABB;



struct TdxGeom;

typedef TdxGeom *PdxGeom;


struct TdxWorld;

typedef TdxWorld *PdxWorld;



struct TdxBody;

typedef TdxBody *PdxBody;

typedef TdxJoint *PdxJoint;


typedef PdxJoint TdJointID;


struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject BaseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};

struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};



struct DECLSPEC_DRECORD TdJointFeedback
{
public:
	TdVector3 f1;
	TdVector3 t1;
	TdVector3 f2;
	TdVector3 t2;
};



typedef TdJointFeedback *PTdJointFeedback;


enum TdJointTypeNumbers : unsigned char { dJointTypeNone, dJointTypeBall, dJointTypeHinge, dJointTypeSlider, dJointTypeContact, dJointTypeUniversal, dJointTypeHinge2, dJointTypeFixed, dJointTypeNull, dJointTypeAMotor, dJointTypeLMotor, dJointTypePlane2D, dJointTypePR, dJointTypePU, dJointTypePiston };


struct DECLSPEC_DRECORD TdSurfaceParameters
{
public:
	int mode;
	float mu;
	float mu2;
	float bounce;
	float bounce_vel;
	float soft_erp;
	float soft_cfm;
	float motion1;
	float motion2;
	float motionN;
	float slip1;
	float slip2;
};



struct DECLSPEC_DRECORD TdContactGeom
{
public:
	TdVector3 pos;
	TdVector3 normal;
	float depth;
	TdxGeom *g1;
	TdxGeom *g2;
	int side1;
	int side2;
};


struct DECLSPEC_DRECORD TdContact
{
public:
	TdSurfaceParameters surface;
	TdContactGeom geom;
	TdVector3 fdir1;
};



typedef TdContact *PdContact;


struct TdxSpace;

typedef TdxSpace *PdxSpace;



struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *Body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};

struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};



typedef int TJointParams;


//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode_single.dll"

extern "C" void __cdecl dJointGroupDestroy(const PdxJointGroup dJointGroupID);

extern "C" PdxJointGroup __cdecl dJointGroupCreate(const int max_size);

extern "C" void __cdecl dJointGroupEmpty(const PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointAttach(const PdxJoint dJointID, const PdxBody body1, const PdxBody body2);

extern "C" void __cdecl dJointDestroy(const PdxJoint dJointID);

extern "C" void * __cdecl dJointGetData(const PdxJoint dJointID);

extern "C" void __cdecl dJointSetData(const PdxJoint dJointID, void * data);

extern "C" void __cdecl dJointSetFeedback(const PdxJoint dJointID, PTdJointFeedback Feedback);

extern "C" PTdJointFeedback __cdecl dJointGetFeedback(const PdxJoint dJointID);

extern "C" int __cdecl dJointGetType(const PdxJoint dJointID);

extern "C" PdxBody __cdecl dJointGetBody(const PdxJoint dJointID, const int index);

extern "C" PdxJoint __cdecl dJointCreateContact(const PdxWorld World, PdxJointGroup dJointGroupID, const PdContact dContact);

extern "C" PdxJoint __cdecl dJointCreateAMotor(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetAMotorAngle(const PdxJoint dJointID, const int anum, const float angle);

extern "C" float __cdecl dJointGetAMotorAngle(const PdxJoint dJointID, const int anum);

extern "C" void __cdecl dJointSetAMotorAxis(const PdxJoint dJointID, const int anum, const int rel, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetAMotorAxis(const PdxJoint dJointID, const int anum, float *result);

extern "C" void __cdecl dJointSetAMotorNumAxes(const PdxJoint dJointID, const int num);

extern "C" int __cdecl dJointGetAMotorNumAxes(const PdxJoint dJointID);

extern "C" void __cdecl dJointSetAMotorParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" float __cdecl dJointGetAMotorParam(const PdxJoint dJointID, const int parameter);

extern "C" void __cdecl dJointSetAMotorMode(const PdxJoint dJointID, const TdAngularMotorModeNumbers mode);

extern "C" int __cdecl dJointGetAMotorMode(const PdxJoint dJointID);

extern "C" float __cdecl dJointGetAMotorAngleRate(const PdxJoint dJointID, const int anum);

extern "C" int __cdecl dJointGetAMotorAxisRel(const PdxJoint dJointID, const int anum);

extern "C" PdxJoint __cdecl dJointCreateBall(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetBallAnchor(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetBallAnchor(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointGetBallAnchor2(const PdxJoint dJointID, float *result);

extern "C" PdxJoint __cdecl dJointCreateHinge(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetHingeAnchor(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetHingeAnchor(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointGetHingeAnchor2(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetHingeAxis(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetHingeAxis(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetHingeParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" float __cdecl dJointGetHingeParam(const PdxJoint dJointID, const int parameter);

extern "C" float __cdecl dJointGetHingeAngle(const PdxJoint dJointID);

extern "C" float __cdecl dJointGetHingeAngleRate(const PdxJoint dJointID);

extern "C" PdxJoint __cdecl dJointCreateHinge2(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetHinge2Anchor(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetHinge2Anchor(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointGetHinge2Anchor2(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetHinge2Axis1(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetHinge2Axis1(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetHinge2Axis2(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetHinge2Axis2(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetHinge2Param(const PdxJoint dJointID, const int parameter, const float value);

extern "C" float __cdecl dJointGetHinge2Param(const PdxJoint dJointID, const int parameter);

extern "C" float __cdecl dJointGetHinge2Angle1(const PdxJoint dJointID);

extern "C" float __cdecl dJointGetHinge2Angle1Rate(const PdxJoint dJointID);

extern "C" float __cdecl dJointGetHinge2Angle2Rate(const PdxJoint dJointID);

extern "C" PdxJoint __cdecl dJointCreateSlider(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetSliderAxis(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetSliderAxis(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetSliderParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" float __cdecl dJointGetSliderParam(const PdxJoint dJointID, const int parameter);

extern "C" float __cdecl dJointGetSliderPosition(const PdxJoint dJointID);

extern "C" float __cdecl dJointGetSliderPositionRate(const PdxJoint dJointID);

extern "C" PdxJoint __cdecl dJointCreateUniversal(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointGetUniversalAnchor(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointGetUniversalAnchor2(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetUniversalAxis1(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetUniversalAxis1(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetUniversalAxis2(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" void __cdecl dJointGetUniversalAxis2(const PdxJoint dJointID, float *result);

extern "C" void __cdecl dJointSetUniversalParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" float __cdecl dJointGetUniversalParam(const PdxJoint dJointID, const int parameter);

extern "C" void __cdecl dJointSetUniversalAnchor(const PdxJoint dJointID, const float x, const float y, const float z);

extern "C" PdxJoint __cdecl dJointCreateFixed(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetFixed(const PdxJoint dJointID);

extern "C" PdxJoint __cdecl dJointCreatePlane2D(const PdxWorld World, PdxJointGroup dJointGroupID);

extern "C" void __cdecl dJointSetPlane2DXParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" void __cdecl dJointSetPlane2DYParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" void __cdecl dJointSetPlane2DAngleParam(const PdxJoint dJointID, const int parameter, const float value);

extern "C" void __cdecl dGeomDestroy(const PdxGeom Geom);

extern "C" int __cdecl dGeomGetClass(const PdxGeom Geom);

extern "C" PdxSpace __cdecl dGeomGetSpace(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetBody(const PdxGeom Geom, PdxBody Body);

extern "C" PdxBody __cdecl dGeomGetBody(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetPosition(const PdxGeom Geom, const float x, const float y, const float z);

extern "C" PdVector3 __cdecl dGeomGetPosition(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetRotation(const PdxGeom Geom, float const *R);

extern "C" PdMatrix3 __cdecl dGeomGetRotation(const PdxGeom Geom);

extern "C" void __cdecl dGeomSetQuaternion(const PdxGeom Geom, const void *TdQuaternion);

extern "C" void __cdecl dGeomGetQuaternion(const PdxGeom Geom, float *result);

extern "C" void __cdecl dGeomSetData(const PdxGeom Geom, void * data);

extern "C" void * __cdecl dGeomGetData(const PdxGeom Geom);

extern "C" void __cdecl dGeomGetAABB(const PdxGeom Geom, float *aabb);

extern "C" void __cdecl dGeomTransformSetGeom(const PdxGeom Geom, const PdxGeom obj);

extern "C" PdxGeom __cdecl dGeomTransformGetGeom(const PdxGeom Geom);

extern "C" void __cdecl dGeomTransformSetInfo(const PdxGeom Geom, int mode);

extern "C" int __cdecl dGeomTransformGetInfo(const PdxGeom Geom);

extern "C" void __cdecl dGeomTransformSetCleanup(const PdxGeom Geom, const int mode);

extern "C" int __cdecl dGeomTransformGetCleanup(const PdxGeom Geom);

extern "C" void __cdecl dGeomBoxGetLengths(const PdxGeom Geom, float *result);

extern "C" void __cdecl dGeomBoxSetLengths(const PdxGeom Geom, const float lx, const float ly, const float lz);

extern "C" void __cdecl dGeomPlaneSetParams(const PdxGeom Geom, const float a, const float b, const float c, const float d);

extern "C" void __cdecl dGeomPlaneGetParams(const PdxGeom Geom, float *result);

extern "C" void __cdecl dGeomSphereSetRadius(const PdxGeom Geom, const float radius);

extern "C" float __cdecl dGeomSphereGetRadius(const PdxGeom Geom);